--- a/Portal.Client/wwwroot/index.html
+++ b/Portal.Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="Portal.Client.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/Heron.MudCalendar/Heron.MudCalendar.min.css" rel="stylesheet" />
 </head>
 <body>
     <div id="app">
@@ -37,6 +38,7 @@
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <!--<script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>-->
     <script src="js/BlazorEnvironment.js"></script>
+    <script type="module" src="_content/Heron.MudCalendar/Heron.MudCalendar.min.js"></script>
     <script>
         const originalFetch = fetch;
         fetch = async (url, options) => {
