--- a/Portal.Client/wwwroot/index.html
+++ b/Portal.Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -39,6 +39,7 @@
     <!--<script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>-->
     <script src="js/BlazorEnvironment.js"></script>
     <script type="module" src="_content/Heron.MudCalendar/Heron.MudCalendar.min.js"></script>
+    <script src="_content/Toolbelt.Blazor.HotKeys2/hotkeys.js"></script>
     <script>
         const originalFetch = fetch;
         fetch = async (url, options) => {
